review issue fix

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@ li {
   height: 40px;
 }
 
-.li-class:hover {
+/* .li-class:hover {
     background: #18699b;
-}    ​
+}    ​ */
 
 .li-class.hover > .circle {
   background: #18699b;
