fixing message input text area size

--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@ body {
     <div id="message-send">
     <div class="item1"  style="margin-left: 25px; margin-right: 25px;">
       <p style="height:10px;"></p>
-      <input type="text" class="textbox-border" size="101" maxlength="200" id="msgTextInput"  placeholder="Type a message..." style="width:100%;">
+      <!-- <input type="text" class="textbox-border" size="101" maxlength="200" id="msgTextInput"  placeholder="Type a message..." style="width:100%;"> -->
+      <textarea  class="textbox-border" id="msgTextInput"  rows = "20" cols="50" placeholder="Type a message..." style="width:100%;"></textarea>
     </div>
 
     <div class="item1"  style="margin-left: 84%;">
